# symbolpad

./: index.html  package-lock.json  package.json
.github/workflows/: build.yml
doc/: git-start.sh  project-summary.md
src/: index.html
src-tauri/: Cargo.toml  tauri-conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
